fix(a11y): edit red color in footer to fix contrast issues

--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -1119,7 +1119,7 @@ footer .line {
 }
 
 .FooterBottom p span {
-  color: var(--Color-Secondary);
+  color: #AF1818;
 }
 
 .social a {
